// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RejectWithReasonModal > should show empty fields 1`] = `
<tm-edit-request-modal
  accountVerificationRequestComments=""
  accountVerificationRequestCountry=""
  accountVerificationRequestEmail=""
  accountVerificationRequestInstitution=""
  accountVerificationRequestName=""
  activeModal={[Function NgbActiveModal]}
  country={[Function FormControl]}
  countryOptions={[Function Array]}
  countryService={[Function _CountryService]}
>
  <div
    class="modal-header bg-primary"
  >
    <h5
      class="modal-title text-white"
    >
      <div>
        Edit Account Verification Request for 
      </div>
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="reject-account-verification-request-modal"
  >
    <div>
      <label>
        <b>
          Name:
        </b>
      </label>
      <input
        class="form-control"
        id="request-name"
        type="text"
      />
    </div>
    <div>
      <label>
        <b>
          Email:
        </b>
      </label>
      <input
        class="form-control"
        id="request-email"
        type="text"
      />
    </div>
    <div>
      <label>
        <b>
          Institution:
        </b>
      </label>
      <input
        class="form-control"
        id="request-institution"
        type="text"
      />
    </div>
    <div>
      <label>
        <b>
          Country:
        </b>
      </label>
      <tm-searchable-combobox
        class="ng-untouched ng-pristine ng-valid"
        inputid="request-country"
        placeholder="Search for a country or region..."
      >
        <div
          class="searchable-combobox position-relative w-100"
          data-expanded="false"
          filtermode="manual"
          ngcombobox=""
        >
          <input
            aria-autocomplete="list"
            aria-disabled="false"
            aria-expanded="false"
            autocomplete="off"
            class="form-control w-100 searchable-combobox-input"
            id="request-country"
            ngcomboboxinput=""
            placeholder="Search for a country or region..."
            role="combobox"
            type="text"
          />
          <button
            aria-label="Open"
            class="searchable-combobox-toggle"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-chevron-down"
            />
          </button>
        </div>
      </tm-searchable-combobox>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div>
          <label>
            <b>
              Comments:
            </b>
          </label>
        </div>
        <div
          class="form-group"
        >
          <textarea
            class="form-control"
            id="request-comments"
            rows="5"
          />
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <button
          class="btn btn-light"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary"
          id="btn-confirm-edit-request"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</tm-edit-request-modal>
`;

exports[`RejectWithReasonModal > should show populated data 1`] = `
<tm-edit-request-modal
  accountVerificationRequestComments={[Function String]}
  accountVerificationRequestCountry=""
  accountVerificationRequestEmail={[Function String]}
  accountVerificationRequestInstitution={[Function String]}
  accountVerificationRequestName={[Function String]}
  activeModal={[Function NgbActiveModal]}
  country={[Function FormControl]}
  countryOptions={[Function Array]}
  countryService={[Function _CountryService]}
>
  <div
    class="modal-header bg-primary"
  >
    <h5
      class="modal-title text-white"
    >
      <div>
        Edit Account Verification Request for John Doe
      </div>
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="reject-account-verification-request-modal"
  >
    <div>
      <label>
        <b>
          Name:
        </b>
      </label>
      <input
        class="form-control"
        id="request-name"
        type="text"
      />
    </div>
    <div>
      <label>
        <b>
          Email:
        </b>
      </label>
      <input
        class="form-control"
        id="request-email"
        type="text"
      />
    </div>
    <div>
      <label>
        <b>
          Institution:
        </b>
      </label>
      <input
        class="form-control"
        id="request-institution"
        type="text"
      />
    </div>
    <div>
      <label>
        <b>
          Country:
        </b>
      </label>
      <tm-searchable-combobox
        class="ng-untouched ng-pristine ng-valid"
        inputid="request-country"
        placeholder="Search for a country or region..."
      >
        <div
          class="searchable-combobox position-relative w-100"
          data-expanded="false"
          filtermode="manual"
          ngcombobox=""
        >
          <input
            aria-autocomplete="list"
            aria-disabled="false"
            aria-expanded="false"
            autocomplete="off"
            class="form-control w-100 searchable-combobox-input"
            id="request-country"
            ngcomboboxinput=""
            placeholder="Search for a country or region..."
            role="combobox"
            type="text"
          />
          <button
            aria-label="Open"
            class="searchable-combobox-toggle"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="fa fa-chevron-down"
            />
          </button>
        </div>
      </tm-searchable-combobox>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div>
          <label>
            <b>
              Comments:
            </b>
          </label>
        </div>
        <div
          class="form-group"
        >
          <textarea
            class="form-control"
            id="request-comments"
            rows="5"
          />
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <button
          class="btn btn-light"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary"
          id="btn-confirm-edit-request"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</tm-edit-request-modal>
`;
